<resources>
    <string name="app_name">AppNote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_skip">Пропустить</string>
    <string name="notes">Заметки</string>
    <string name="search_for_notes">Поиск заметок</string>
    <string name="plus">+</string>
    <string name="name">Название:</string>
    <string name="description">Описание:</string>
    <string name="ready">Готово</string>
</resources>