<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.NoteAppFragment">

    <RelativeLayout
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="#131212">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/icon_dehaze" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/notes"
            android:textColor="#B1B1B1"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/icon_shape" />

    </RelativeLayout>

    <EditText
        android:id="@+id/search_for_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        android:backgroundTint="#191818"
        android:drawableStart="@drawable/icon_search"
        android:drawablePadding="10dp"
        android:hint="@string/search_for_notes"
        android:padding="15dp"
        android:textColorHint="#505050" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_for_notes"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_the_note" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_item"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="35dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="40sp" />

</RelativeLayout>