<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.NoteAppDetailFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/icon_arrow_back" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="30 мая" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@id/date"
        android:textColor="#676767"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:text="17:21" />

    <TextView
        android:id="@+id/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ready"
        android:textColor="#D88B02"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:hint="@string/name"
        android:textColor="#B1B1B1"
        android:textColorHint="#4A4A4A"
        android:textSize="21sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/black"
        android:hint="@string/description"
        android:textColor="#B1B1B1"
        android:textColorHint="#4A4A4A"
        android:textSize="19sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_gray"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#191818" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_beige"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#EBE4C9" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_burgundy"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#571818" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_radio_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp" />

        <RadioButton
            android:id="@+id/btn_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp" />

        <RadioButton
            android:id="@+id/btn_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp" />

    </RadioGroup>

</RelativeLayout>